vlib/v/checker/tests/generics_struct_nokeys_init_err.out
vlib/v/checker/tests/generics_struct_nokeys_init_err.vv:6:9: error: too many fields in `Am` literal (expecting 1, got 2)
    4 | 
    5 | fn convert[T](num int) T {
    6 |     return T{num, 1}
      |            ~~~~~~~~~
    7 | }
    8 |
